# rfitsio

pkg/: DESCRIPTION  NAMESPACE  configure.ac
pkg/R/: rfitsio.R
pkg/inst/fits_files/: .gitattributes  create-fits.c  header.fits
pkg/man/: closeFITSFile.Rd  createFITSFile.Rd  createImg.Rd  createTable.Rd  creation.Rd  errorStatus.Rd  getCFITSIOVersion.Rd  getColumnInformation.Rd  getColumnNumber.Rd  getCurrentHDUNum.Rd  getCurrentHDUType.Rd  getImgDimSize.Rd  getImgType.Rd  getNumOfColumns.Rd  getNumOfHDUs.Rd  getNumOfKeys.Rd  getNumOfRows.Rd  getNumOfRowsColumns.Rd  getVersion.Rd  insertDeleteRows.Rd  isfitsobj.Rd  moveHDU.Rd  openFITS.Rd  readColumn.Rd  readKey.Rd  readRecordCard.Rd  writeColumn.Rd  writeCommentHistory.Rd
pkg/src/: Makevars  Makevars.in  error.c  file_access.c  hdr.c  hdu.c  img.c  rfitsio.h  tables.c  types.c
pkg/tests/: create-fits.c  test_col_read_write.R  test_col_read_write.Rout.save  test_file_access.R  test_file_creation.R  test_hdr_read.R  test_hdr_read.Rout.save  test_table_read.R  test_table_write.R
www/: index.php
www/css/: default.css  footer.css  master.css  navigation.css  sidebar.css
www/includes/: nav.html
